[project]
name = "holoradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Perkins", email = "simon.perkins@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "holoscan>=3.3.0",
    "jax>=0.6.1",
    "nvidia-cuda-runtime-cu12>=12.9.37",
]

[project.scripts]
holoradio = "holoradio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]
